Made little changes in the documentation
